fixed text align

--- a/prestyles.css
+++ b/prestyles.css
@@ -52,6 +52,7 @@ h1 {
   margin: 0;
   font-family: 'Pacifico', cursive;
   font-size: 150px;
+  text-align: center;
 }
 
 h2, h3, h4 {
