--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /* ------------ DIN KOD BÖRJAR HÄR! ----------- */
 
 .pi {
-  text
+  text-align: center;
 }
